Wrap skills to prevent being cut off

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -527,7 +527,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center;
+  flex-wrap: wrap;
 }
 
 .profile-exp {
